--- a/styles/projects.module.scss
+++ b/styles/projects.module.scss
@@ -13,9 +13,9 @@
 }
 
 .title {
-    color: var(--primary);
     font-family: "Bebas Neue";
     font-size: 1.5rem;
+    letter-spacing: var(--heading-letter-spacing);
 }
 
 .divider {
